commit to push on GitHub

--- a/templates/book.html
+++ b/templates/book.html
@@ -17,8 +17,9 @@
               <li class="list-group-item">Title: {{ book.title }}</li>
               <li class="list-group-item">Author: {{ book.author}}</li>
               <li class="list-group-item">Year: {{ book.year }}</li>
-              <li class="list-group-item">Reviews count: {{ reviews_count }}</li>
-              <li class="list-group-item">Average score: {{ average_rating }}</li>
+              <li class="list-group-item"><img src="https://d.gr-assets.com/misc/1454549184-1454549184_goodreads_misc.jpg" style="width: 100px;" alt=""></li>
+              <li class="list-group-item">Nr. of Reviews: {{ reviews_count }}</li>
+              <li class="list-group-item">Average Rating: {{ average_rating }}</li>
           </ul>
       </div>
 
