--- a/templates/includes/_review_content.html
+++ b/templates/includes/_review_content.html
@@ -17,7 +17,7 @@
             {% endif %}
           </div>
           <!-- <div class="review-summary card-title">One in a Million</div> -->
-          <div class="review-user"><a href="">User</a></div>
+          <div class="review-user"><a href="">{{ user_of_review['username'] }}</a></div>
           <!-- TODO: verify if session actually works -->
 
           <div class="user-data card">
