--- a/templates/index.html
+++ b/templates/index.html
@@ -5,10 +5,10 @@
 {% endblock %}
 
 {% block body %}
-    
+
     <div class="row">
         <div class="col-sm-12">
-            <h1>Book review</h1>
+            <h1 class="big-text"><b>BOOK REVIEW</b></h1>
         </div>
         <div class="col-sm-12">
 
