--- a/templates/login.html
+++ b/templates/login.html
@@ -13,8 +13,8 @@
       <div class="col-sm-12">
         <form action="{{ url_for('login') }}" method="post">
           <div class="form-group">
-            <input class="form-control" name="username" placeholder="Choose an username">
-            <input type = "password" class="form-control" name="password" placeholder="Choose a password">
+            <input class="form-control" name="username" placeholder="Enter your username">
+            <input type = "password" class="form-control" name="password" placeholder="Enter your password">
           </div>
 
           <div class="form-group">
