improved search and review rendering

--- a/templates/includes/_review_content.html
+++ b/templates/includes/_review_content.html
@@ -17,7 +17,7 @@
             {% endif %}
           </div>
           <!-- <div class="review-summary card-title">One in a Million</div> -->
-          <div class="review-user"><a href="">{{ user_of_review['username'] }}</a></div>
+          <div class="review-user"><a href="">{{ review['username'] }}</a></div>
           <!-- TODO: verify if session actually works -->
 
           <div class="user-data card">
@@ -25,7 +25,7 @@
               <div class="profile">
                 <img src="https://a4-images.myspacecdn.com/images03/2/ddec1e4d26f94cae963c8c54e9838749/600x600.jpg"/>
                 <div class="card-title profile-username">User
-                  <div><a href=""> reviews</a></div>
+                  <div><a href="">X reviews</a></div>
                 </div>
               </div>
             </div>
